# UPSMonitor

./: .gitignore  CMakeLists.txt  Makefile  README.md  daemon.sh  main.cpp  settings.json  test.cpp  test.json  ups-monitor.service
include/: TMonitor.hpp
src/: TMonitor.cpp
